fix: same spacing in checkbox and radio groups (#2234)
resolves #2134

--- a/packages/css/checkbox.css
+++ b/packages/css/checkbox.css
@@ -198,8 +198,26 @@
 }
 
 .ds-checkbox__group {
+  --dsc-checkbox-group-gap: var(--ds-spacing-4);
+
   display: flex;
   flex-direction: column;
-  gap: var(--ds-spacing-5);
+  gap: var(--dsc-checkbox-group-gap);
   width: fit-content;
+}
+
+.ds-checkbox__group--sm {
+  --dsc-checkbox-group-gap: var(--ds-spacing-3);
+
+  margin-top: calc(var(--ds-spacing-1) * -1);
+}
+
+.ds-checkbox__group--md {
+  --dsc-checkbox-group-gap: var(--ds-spacing-4);
+}
+
+.ds-checkbox__group--lg {
+  --dsc-checkbox-group-gap: var(--ds-spacing-5);
+
+  margin-top: var(--ds-spacing-1);
 }
